lb-web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-service
spec:
  selector:
    app: simple-web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP  # 클러스터 내부에서만 접근 가능
